--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>IceBreakers</title>
-    <link href="styles.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <header>
